--- a/styles/detail.css
+++ b/styles/detail.css
@@ -1,3 +1,15 @@
+html, body{
+ width: 100%;
+ height: 100%;
+}
+header img{
+ height: 60px;
+ width: 60px;
+}
+main img{
+  height: 500px;
+  width: 500px;
+}
 .social-links img{
   width: 22px;
   height: 20px;
