--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,14 @@
+ html, body{
+  width: 100%;
+  height: 100%;
+}
+header img{
+  height: 60px;
+  width: 60px;
+}
 .images img{
-  width: 300px;
-  height: 300px;
+  width: 150px;
+  height: 150px;
 }
 .social-links img{
   width: 22px;
