--- a/styles/list.css
+++ b/styles/list.css
@@ -1,3 +1,15 @@
+html, body, .container{
+ width: 100%;
+ height: 100%;
+}
+header img{
+ height: 60px;
+ width: 60px;
+}
+#list-view img{
+  height: 200px;
+  width: 250px;
+}
 .social-links img{
   width: 22px;
   height: 20px;
