--- a/styles/detail.css
+++ b/styles/detail.css
@@ -2,6 +2,13 @@ html, body{
  width: 100%;
  height: 100%;
 }
+body{
+  margin: 0;
+  background-color: #e0e0e0;
+}
+header, footer{
+  background-color: rosybrown;
+}
 header img{
  height: 60px;
  width: 60px;
@@ -9,6 +16,13 @@ header img{
 main img{
   height: 500px;
   width: 500px;
+  margin: 2% 4% 0%;
+}
+form{
+  margin: 0% 4% 1%;
+}
+.hotel-info{
+  margin: 1% 4% 2%;
 }
 .social-links img{
   width: 22px;
