--- a/styles/payment.css
+++ b/styles/payment.css
@@ -2,6 +2,30 @@ html, body{
  width: 100%;
  height: 100%;
 }
+body{
+  margin: 0;
+  background-color: #e0e0e0;
+}
+header, footer{
+  background-color: rosybrown;
+}
+.hotel-details{
+  width: 50%;
+  height: 20%;
+  background-color: rgb(132, 136, 139);
+  margin: 2% 0%;
+  margin-left: auto;
+  margin-right: auto;
+  align-self: center;
+}
+.payment-details{
+  margin: 2%;
+}
+.tariff-details{
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 1% 2%;
+}
 header img{
  height: 60px;
  width: 60px;
