--- a/styles/detail.css
+++ b/styles/detail.css
@@ -1,6 +1,11 @@
 html, body{
  width: 100%;
  height: 100%;
+ font-family: 'Ubuntu';
+}
+a{
+  text-decoration: none;
+  color: black;
 }
 body{
   margin: 0;
@@ -8,6 +13,19 @@ body{
 }
 header, footer{
   background-color: rosybrown;
+}
+/*header sticky*/
+header{
+  display: flex;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+}
+/*Login button*/
+header a{
+  justify: flex-end;
+  align-self: center;
+  margin-right: 2%;
 }
 header img{
  height: 60px;
@@ -27,4 +45,29 @@ form{
 .social-links img{
   width: 22px;
   height: 20px;
+}
+/*entire Footer*/
+footer{
+  position: sticky;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 12px;
+}
+footer a{
+  align-self: center;
+  order: 1;
+}
+footer .social-links{
+  align-self: center;
+  order: 3;
+}
+footer span{
+  order: 2;
+  font-size: 10px;
+  align-self: flex-end;
+  position: relative;
+  top: 8px;
+  bottom: 1px;
 }
