--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,11 @@
  html, body{
   width: 100%;
   height: 100%;
+  font-family: 'Ubuntu';
+}
+a{
+  text-decoration: none;
+  color: black;
 }
 body{
   margin: 0;
@@ -9,17 +14,45 @@ body{
 header, footer{
   background-color: rosybrown;
 }
+header{
+  display: flex;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+}
+/*Login button*/
+header a{
+  justify: flex-end;
+  align-self: center;
+  margin-right: 2%;
+}
+/*Logo*/
 header img{
   height: 60px;
   width: 60px;
+  justify-content: flex-start;
+  align-self:
 }
-.searchbar{
+.searchbardiv{
   background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   height: 380px;
   width: 100%;
+  display: flex;
+}
+/*Search bar centered*/
+.searchbardiv input{
+  border: 1px solid transparent;
+  background-color: #f1f1f1;
+  border-radius: 12px;
+  font-size: 16px;
+  padding: 10px;
+  width: 100%;
+}
+.searchbar{
+  margin: auto;
 }
 .images{
   margin-left: 15%;
@@ -31,7 +64,38 @@ header img{
   border-radius: 25%;
   padding: 4%;
 }
+/*View more div centered*/
+#viewmore{
+  margin: auto;
+  text-align: center;
+  padding-bottom: 2%;
+}
 .social-links img{
   width: 22px;
   height: 20px;
+}
+/*Footer whole*/
+footer{
+  position: sticky;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  padding: 12px;
+}
+footer a{
+  align-self: center;
+  order: 1;
+}
+footer .social-links{
+  align-self: center;
+  order: 3;
+}
+footer span{
+  order: 2;
+  font-size: 10px;
+  align-self: flex-end;
+  position: relative;
+  top: 8px;
+  bottom: 1px;
 }
