--- a/styles/detail.css
+++ b/styles/detail.css
@@ -1,7 +1,7 @@
 html, body{
  width: 100%;
  height: 100%;
- font-family: 'Ubuntu';
+ font-family: 'Ubuntu',sans-serif;
 }
 a{
   text-decoration: none;
@@ -10,6 +10,10 @@ a{
 body{
   margin: 0;
   background-color: #e0e0e0;
+}
+.container{
+  display: flex;
+  flex-direction: column;
 }
 header, footer{
   background-color: rosybrown;
@@ -30,17 +34,78 @@ header a{
 header img{
  height: 60px;
  width: 60px;
+ margin-left: 1%;
 }
-main img{
-  height: 500px;
-  width: 500px;
-  margin: 2% 4% 0%;
+#content
+{
+    margin-left: 4%;
+    margin-right: 4%;
 }
-form{
-  margin: 0% 4% 1%;
+#Description
+{
+    margin-top: 1%;
+    margin-bottom: 3%;
 }
-.hotel-info{
-  margin: 1% 4% 2%;
+form
+{
+    margin-bottom: 1%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    justify-content: space-between;
+    border: 1;
+}
+#Radison
+{
+    max-height: 350px;
+    width: 500px;
+    margin: 2% 0;
+}input[type=text] input[type=date]
+{
+    width:60%;
+    margin-right: 5%;
+}
+h4
+{
+    font-family: cursive;
+}
+#hotel-Registration
+{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border: 1px solid black;
+    margin-top: 2%;
+    max-height: 400px;
+}
+.form-element{
+    margin-bottom: 10%;
+    vertical-align: middle;
+}
+.form-element:first-child
+{
+    margin-top: 30px;
+}
+#Form-register{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-left: 1px solid black;
+}
+#button1
+{
+  margin: 0 50% ;
+    padding: 2% ;
+}
+label
+{
+    display: inline-block;
+    width: 150px;
+    margin-left: 20px;
+}
+.social-links{
+  width: 80px;
 }
 .social-links img{
   width: 22px;
@@ -53,21 +118,20 @@ footer{
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  padding: 12px;
+  padding: 1%;
 }
 footer a{
   align-self: center;
   order: 1;
+  margin-left: 2%;
 }
 footer .social-links{
   align-self: center;
   order: 3;
+  margin-right: 2%;
 }
 footer span{
   order: 2;
   font-size: 10px;
-  align-self: flex-end;
-  position: relative;
-  top: 8px;
-  bottom: 1px;
+  align-self: center;
 }
