--- a/styles/list.css
+++ b/styles/list.css
@@ -1,38 +1,48 @@
 html, body{
  width: 100%;
  height: 100%;
- font-family: 'Ubuntu';
+ font-family: 'Ubuntu',sans-serif;
 }
 a{
-  text-decoration: none;
-  color: black;
+ text-decoration: none;
+ color: black;
 }
 body{
-  margin: 0;
-  background-color: #e0e0e0;
+ margin: 0;
+ background-color: #e0e0e0;
+}
+.container{
+ display: flex;
+ flex-direction: column;
 }
 header, footer{
-  background-color: rosybrown;
+ background-color: rosybrown;
 }
-/*header sticky*/
 header{
-  display: flex;
-  justify-content: space-between;
-  position: sticky;
-  top: 0;
+ display: flex;
+ justify-content: space-between;
+ position: sticky;
+ top: 0;
 }
 /*Login button*/
 header a{
-  justify: flex-end;
-  align-self: center;
-  margin-right: 2%;
+ justify: flex-end;
+ align-self: center;
+ margin-right: 2%;
+}
+/*Logo*/
+header img{
+  height: 60px;
+  width: 60px;
+  justify-content: flex-start;
+  margin-left: 1%;
 }
 /*List css*/
 ul{
   text-align: center;
 }
 li{
-  padding: 20px;
+  padding: 2%;
   display: inline-block;
   font-weight: bold;
 }
@@ -46,44 +56,48 @@ li{
 /*Hotel cards*/
 .hotels{
   margin: 2%;
-  background-color: rgb(132, 136, 139);
+  background-color: lightgray;
   width: 40%;
   display: inline-block;
 }
-header img{
- height: 60px;
- width: 60px;
+.hotels-info{
+  display: inline-block;
+  align-self: center;
+  margin-left: 2%;
 }
 #list-view img{
   height: 200px;
   width: 250px;
+  float: left;
+}
+.social-links{
+  width: 80px;
 }
 .social-links img{
   width: 22px;
   height: 20px;
 }
-/*Footer's everthing*/
+/*Footer whole*/
 footer{
   position: sticky;
   bottom: 0;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  padding: 12px;
+  padding: 1%;
 }
 footer a{
   align-self: center;
   order: 1;
+  margin-left: 2%;
 }
 footer .social-links{
   align-self: center;
   order: 3;
+  margin-right: 2%;
 }
 footer span{
   order: 2;
   font-size: 10px;
-  align-self: flex-end;
-  position: relative;
-  top: 8px;
-  bottom: 1px;
+  align-self: center;
 }
