--- a/styles/payment.css
+++ b/styles/payment.css
@@ -1,7 +1,7 @@
 html, body{
  width: 100%;
  height: 100%;
- font-family: 'Ubuntu';
+ font-family: 'Ubuntu',sans-serif;
 }
 a{
   text-decoration: none;
@@ -11,77 +11,105 @@ body{
   margin: 0;
   background-color: #e0e0e0;
 }
+.container, .content{
+ display: flex;
+ flex-direction: column;
+}
 header, footer{
   background-color: rosybrown;
 }
-/*header sticky*/
 header{
-  display: flex;
-  justify-content: space-between;
-  position: sticky;
-  top: 0;
+ display: flex;
+ justify-content: space-between;
+ position: sticky;
+ top: 0;
 }
 /*Login button*/
 header a{
-  justify: flex-end;
-  align-self: center;
-  margin-right: 2%;
+ justify: flex-end;
+ align-self: center;
+ margin-right: 2%;
+}
+/*Logo*/
+header img{
+  height: 60px;
+  width: 60px;
+  justify-content: flex-start;
+  margin-left: 1%;
 }
 .hotel-details{
   width: 50%;
   height: 20%;
+  display: flex;
   background-color: rgb(132, 136, 139);
-  margin: 2% 0%;
-  margin-left: auto;
-  margin-right: auto;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+  margin-top: 4%;
+  margin-bottom: 4%;
+}
+.hotel-details img{
+  width: 270px;
+  height: 300px;
+  justify-content: flex-start;
+}
+.details{
+  display: inline-block;
   align-self: center;
+  margin-right: 40px;
+  clear: both;
 }
 .payment-details{
+  clear: both;
   margin: 2%;
+  margin-bottom: 10%;
+  border-radius: 5px;
+  border: 1px solid black;
+  background-color: rosybrown;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 /*Tariff box*/
-.tariff-details{
+/* .tariff-details{
   border: 1px solid black;
   border-radius: 5px;
   padding: 1% 2%;
-}
+} */
 #paynow{
-  margin-bottom: 2%;
+  margin-top: 5%;
 }
-header img{
- height: 60px;
- width: 60px;
+b{
+  font-family: cursive;
 }
-main img{
-  height: 500px;
-  width: 500px;
+.social-links{
+  width: 80px;
 }
 .social-links img{
   width: 22px;
   height: 20px;
 }
-/*Footer all*/
+/*Footer whole*/
 footer{
   position: sticky;
   bottom: 0;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  padding: 12px;
+  padding: 1%;
 }
 footer a{
   align-self: center;
   order: 1;
+  margin-left: 2%;
 }
 footer .social-links{
   align-self: center;
   order: 3;
+  margin-right: 2%;
 }
 footer span{
   order: 2;
   font-size: 10px;
-  align-self: flex-end;
-  position: relative;
-  top: 8px;
-  bottom: 1px;
+  align-self: center;
 }
