--- a/styles/index.css
+++ b/styles/index.css
@@ -1,41 +1,16 @@
- html, body{
-  width: 100%;
-  height: 100%;
-  font-family: 'Ubuntu',sans-serif;
-}
-a{
-  text-decoration: none;
-  color: black;
-}
-body{
-  margin: 0;
-  background-color: #e0e0e0;
-}
-.container{
+.modals{
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
 }
-header, footer{
-  background-color: rosybrown;
-}
-header{
-  display: flex;
-  justify-content: space-between;
-  position: sticky;
-  top: 0;
-}
-/*Login button*/
-header a{
-  justify: flex-end;
+.modal-body{
+  justify-content: center;
+  align-content: center;
   align-self: center;
-  margin-right: 2%;
+  align-items: center;
 }
-/*Logo*/
-header img{
-  height: 60px;
-  width: 60px;
-  justify-content: flex-start;
-  margin-left: 1%;
+.modal-body button{
+  margin-top: 10%;
+  margin-left: 40%;
 }
 .searchbardiv{
   background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
@@ -94,35 +69,4 @@ header img{
   margin: auto;
   text-align: center;
   padding-bottom: 2%;
-}
-.social-links{
-  width: 80px;
-}
-.social-links img{
-  width: 22px;
-  height: 20px;
-}
-/*Footer whole*/
-footer{
-  position: sticky;
-  bottom: 0;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  padding: 1%;
-}
-footer a{
-  align-self: center;
-  order: 1;
-  margin-left: 2%;
-}
-footer .social-links{
-  align-self: center;
-  order: 3;
-  margin-right: 2%;
-}
-footer span{
-  order: 2;
-  font-size: 10px;
-  align-self: center;
 }
