--- a/styles/list.css
+++ b/styles/list.css
@@ -1,43 +1,7 @@
-html, body{
- width: 100%;
- height: 100%;
- font-family: 'Ubuntu',sans-serif;
-}
-a{
- text-decoration: none;
- color: black;
-}
-body{
- margin: 0;
- background-color: #e0e0e0;
-}
-.container{
- display: flex;
- flex-direction: column;
-}
-header, footer{
- background-color: rosybrown;
-}
-header{
- display: flex;
- justify-content: space-between;
- position: sticky;
- top: 0;
-}
-/*Login button*/
-header a{
- justify: flex-end;
- align-self: center;
- margin-right: 2%;
-}
-/*Logo*/
-header img{
-  height: 60px;
-  width: 60px;
-  justify-content: flex-start;
-  margin-left: 1%;
-}
 /*List css*/
+#pills-tab{
+  justify-content: center;
+}
 ul{
   text-align: center;
 }
@@ -51,7 +15,7 @@ li{
 }
 /*Map view - no display*/
 #map-view{
-  display: none;
+  /* display: none; */
 }
 /*Hotel cards*/
 .hotels{
@@ -59,6 +23,9 @@ li{
   background-color: lightgray;
   width: 40%;
   display: inline-block;
+}
+.hotels:hover{
+  background-color: rosybrown;
 }
 .hotels-info{
   display: inline-block;
@@ -70,34 +37,17 @@ li{
   width: 250px;
   float: left;
 }
-.social-links{
-  width: 80px;
-}
-.social-links img{
-  width: 22px;
-  height: 20px;
-}
-/*Footer whole*/
-footer{
-  position: sticky;
-  bottom: 0;
+.modals{
   display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  padding: 1%;
+  justify-content: space-around;
 }
-footer a{
+.modal-body{
+  justify-content: center;
+  align-content: center;
   align-self: center;
-  order: 1;
-  margin-left: 2%;
+  align-items: center;
 }
-footer .social-links{
-  align-self: center;
-  order: 3;
-  margin-right: 2%;
-}
-footer span{
-  order: 2;
-  font-size: 10px;
-  align-self: center;
+.modal-body button{
+  margin-top: 10%;
+  margin-left: 40%;
 }
