--- a/styles/payment.css
+++ b/styles/payment.css
@@ -1,3 +1,4 @@
+/*Hotel info*/
 .hotel-details {
   width: 50%;
   height: 30%;
@@ -41,18 +42,4 @@
 }
 b{
   font-family: cursive;
-}
-.modals{
-  display: flex;
-  justify-content: space-around;
-}
-.modal-body{
-  justify-content: center;
-  align-content: center;
-  align-self: center;
-  align-items: center;
-}
-.modal-body button{
-  margin-top: 10%;
-  margin-left: 40%;
 }
